# MachineLearningToolbox

./: CMakeLists.txt  README.md  formatCode.sh
.github/workflows/: automated-testing
examples/SupervisedLearning/Regression/: LinearRegression.cpp
include/SupervisedLearning/Regression/: LinearRegression.h  PolynomialRegression.h  README.md
src/SupervisedLearning/Regression/: LinearRegression.cpp  PolynomialRegression.cpp
test/: testMain.cpp
test/SupervisedLearning/Regression/: LinearRegressionTest.cpp
